--- a/ParaAdmin/css/ParaAdmin.css
+++ b/ParaAdmin/css/ParaAdmin.css
@@ -8,37 +8,11 @@
   margin: 20px 0;
 }
 
-
-.para-settings .option-box > textarea,
-.para-settings .option-box > p
- {
-	width:100%;
-}
-
-.para-settings .option-box > input {
-  width: 50%;
-}
-
-
-.para-settings h2 {
-  font-size: 20px;
-  font-weight: bold;
-  margin: 25px 0;
-}
-
-
-
-
-
-
-
-
 .para-settings .option-box {
   border-left: 3px solid rgb(255, 255, 255);
   margin: 10px 0;
   padding: 10px;
 }
-
 
 
 .para-settings .option-box:hover {
@@ -95,6 +69,70 @@
 }
 
 
+
+
+.para-settings .new_user_profile_social {
+  margin: 15px 5px;
+}
+
+
+
+.para-settings ul.voting-bg-img-list{}
+
+.para-settings ul.voting-bg-img-list li {
+  display: inline-block;
+  margin: 5px;
+}
+.para-settings ul.voting-bg-img-list li.bg-selected {}
+
+.para-settings ul.voting-bg-img-list li img{border: 2px solid #ffffff;}
+
+.para-settings ul.voting-bg-img-list li.bg-selected img{
+  border: 2px solid #ff5a11;
+}
+
+
+.para-settings h2 {
+  font-size: 20px;
+  font-weight: bold;
+  margin: 25px 0;
+}
+
+.para-settings .pricing-table{
+
+}
+
+.para-settings .pricing-table .column {
+  border-bottom: 1px solid #ff9601;
+  border-left: 1px solid #ff9601;
+  border-top: 1px solid #ff9601;
+  display: inline-block;
+  float: left;
+  text-align: center;
+  vertical-align: top;
+  width: 48%;
+}
+
+.para-settings .pricing-table .column:last-child {
+  border-right: 1px solid #ff9601;
+}
+
+.para-settings .paln {
+
+  border-bottom: 1px solid rgb(255, 150, 1);
+  display: block;
+  font-size: 20px;
+  font-weight: bold;
+  line-height: 30px;
+  padding: 10px 0;
+}
+.para-settings .cell {
+  border-bottom: 1px solid rgb(255, 150, 1);
+  display: block;
+  line-height: 20px;
+  padding: 7px 0;
+}
+
 .para-settings .hidden-mob {
 
   display: none;
@@ -102,7 +140,46 @@
 }
 
 
-/* data-table */
+
+.para-settings .green {
+  background: url("tik-mark.png") no-repeat scroll 0 3px rgba(0, 0, 0, 0);
+  display: inline-block;
+	padding-left: 25px;
+  line-height: 20px;
+
+}
+
+.para-settings .red {
+  background: url("cross-mark.png") no-repeat scroll 0 3px rgba(0, 0, 0, 0);
+  display: inline-block;
+	padding-left: 25px;
+  line-height: 20px;
+
+}
+
+.para-settings .price {
+  font-size: 18px;
+  font-weight: bold;
+  padding: 25px 0;
+  border-bottom: 1px solid rgb(255, 150, 1);
+}
+
+
+.para-settings .buy-now {
+  background: none repeat scroll 0 0 rgb(221, 221, 221);
+  border-bottom: 2px solid rgb(157, 157, 157);
+  border-radius: 12px;
+  padding: 2px 12px;
+  text-decoration: none;
+}
+
+.para-settings .buy-now:hover {
+
+  border-bottom: 2px solid #706f6f;
+
+}
+
+
 
 .para-settings .data-table {
   border: 1px solid rgb(199, 199, 199);
@@ -136,11 +213,6 @@
   padding: 5px 10px;
   display:none;
 }
-
-
-/*para-form-table*/
-
-
 .para-settings .para-form-table {
 
   border-collapse: collapse;
@@ -170,9 +242,112 @@
 }
 
 
+
+/*para-dashboard*/
+
+.para-dashboard {
+  background: none repeat scroll 0 0 rgb(91, 116, 145);
+  padding: 10px;
+}
+
+.para-dashboard .dash-box {
+  background: none repeat scroll 0 0 rgb(93, 126, 163);
+  border: 1px solid rgb(122, 170, 223);
+  display: inline-block;
+  height: auto;
+  margin-bottom: 30px;
+  margin-right: 10px;
+  margin-top: 0;
+  overflow: hidden;
+  padding-bottom: 30px;
+  vertical-align: top;
+  width: 350px;
+}
+
+.para-dashboard .dash-box-title {
+  background: none repeat scroll 0 0 rgb(100, 140, 186);
+  color: rgb(255, 255, 255);
+  font-size: 16px;
+  font-weight: bold;
+  line-height: 30px;
+  padding: 0 10px;
+}
+
+.para-dashboard .dash-box-title .fa {
+  padding-right: 10px;
+}
+
+.para-dashboard .dash-box-info {
+  color: rgb(238, 238, 238);
+  font-size: 12px;
+  padding: 10px;
+}
+
+.para-dashboard .dash-box .total-online {
+  color: rgb(255, 255, 255);
+  font-size: 40px;
+  padding: 30px 10px 10px;
+  text-align: center;
+}
+
+.para-dashboard .dash-box .total-session {
+  color: rgb(255, 255, 255);
+  font-size: 40px;
+  padding: 30px 10px 10px;
+  text-align: center;
+}
+
+
+
+
+.para-dashboard .dash-box .para-data-table {
+  border: 1px solid rgb(221, 221, 221);
+  border-collapse: collapse;
+  color: rgb(255, 255, 255);
+  text-align: left;
+}
+
+.para-dashboard .dash-box .para-data-table th {
+  padding: 7px;
+}
+.para-dashboard .dash-box tr {
+  border-bottom: 1px solid rgb(221, 221, 221);
+}
+.para-dashboard .dash-box .para-data-table td {
+  padding: 5px;
+}
+
+.para-dashboard .dash-box .para-data-table a {
+  color: rgb(255, 255, 255);
+  text-decoration: none;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 @media all and (max-width: 799px) {
 	
-
+	
+	
+	
+	
+	
+	
 	
 	.para-settings ul.tab-nav li {
 	  display: block;
@@ -184,6 +359,22 @@
 		font-weight: bold;
 		}	
 	
+
+
+
+
+	.para-settings .pricing-table .column {
+		display:block;
+		float:none;
+		width:100%;
+		border-right: 1px solid #ff9601;
+		margin: 50px 0;
+	
+	}
+
+
+
+
 
 	
 }
